Fixing spacing on gallery photos.

--- a/public/ppgallery/css/ppgallery.css
+++ b/public/ppgallery/css/ppgallery.css
@@ -28,7 +28,7 @@ body, html{
     float:left;
     list-style:none;
     cursor:pointer;
-	 height:100px;
+	 height:150px;
 }
 #gallery img{
 }
